--- a/src-android/MailIM/app/src/main/AndroidManifest.xml
+++ b/src-android/MailIM/app/src/main/AndroidManifest.xml
@@ -8,12 +8,12 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".Data">
+        android:theme="@style/AppTheme">
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +25,14 @@
         <activity android:name=".activity.LoginActivity" />
         <activity
             android:name=".activity.SettingsActivity"
-            android:label="@string/title_activity_settings"></activity>
+            android:label="@string/title_activity_settings" />
+        <activity android:name=".activity.EmailActivity" />
+        <activity android:name=".activity.SendEmailActivity" />
+
+        <service
+            android:name=".service.PulseService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
