--- a/src-android/MailIM/app/src/main/AndroidManifest.xml
+++ b/src-android/MailIM/app/src/main/AndroidManifest.xml
@@ -7,32 +7,60 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
-        android:name=".MyApplication"
+        android:name=".util.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
-            <intent-filter>
+        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.ChatActivity" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:label="登录">
+            <intent-filter android:label="mailim">
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ChatActivity" />
-        <activity android:name=".activity.LoginActivity" />
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:label="注册" />
         <activity
             android:name=".activity.SettingsActivity"
             android:label="@string/title_activity_settings" />
-        <activity android:name=".activity.EmailActivity" />
-        <activity android:name=".activity.SendEmailActivity" />
+        <activity android:name=".activity.EmailActivity"
+            android:label="邮件"/>
+        <activity android:name=".activity.SendEmailActivity"
+            android:label="发邮件"/>
 
         <service
             android:name=".service.PulseService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <receiver
+            android:name=".service.MyReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="mailim.chat" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".activity.MyInfoActivity"
+            android:label="个人资料"/>
+        <activity android:name=".activity.UserInfoActivity"
+            android:label="用户信息"/>
+        <activity android:name=".activity.RequestActivity"
+            android:label="添加好友请求"></activity>
     </application>
 
 </manifest>
