--- a/src-android/MailIM/app/src/main/AndroidManifest.xml
+++ b/src-android/MailIM/app/src/main/AndroidManifest.xml
@@ -19,16 +19,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.MainActivity"/>
         <activity android:name=".activity.ChatActivity" />
         <activity
             android:name=".activity.LoginActivity"
             android:label="登录">
-            <intent-filter android:label="mailim">
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".activity.RegisterActivity"
@@ -36,10 +31,12 @@
         <activity
             android:name=".activity.SettingsActivity"
             android:label="@string/title_activity_settings" />
-        <activity android:name=".activity.EmailActivity"
-            android:label="邮件"/>
-        <activity android:name=".activity.SendEmailActivity"
-            android:label="发邮件"/>
+        <activity
+            android:name=".activity.EmailActivity"
+            android:label="邮件" />
+        <activity
+            android:name=".activity.SendEmailActivity"
+            android:label="发邮件" />
 
         <service
             android:name=".service.PulseService"
@@ -55,12 +52,22 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".activity.MyInfoActivity"
-            android:label="个人资料"/>
-        <activity android:name=".activity.UserInfoActivity"
-            android:label="用户信息"/>
-        <activity android:name=".activity.RequestActivity"
-            android:label="添加好友请求"></activity>
+        <activity
+            android:name=".activity.MyInfoActivity"
+            android:label="个人资料" />
+        <activity
+            android:name=".activity.UserInfoActivity"
+            android:label="用户信息" />
+        <activity
+            android:name=".activity.RequestActivity"
+            android:label="添加好友请求" />
+        <activity android:name=".activity.LaunchActivity" android:theme="@style/Theme.Design.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
